--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
                     </div>
 
-                    <div class="item-carousel" data-toggle="modal" data-target="#modal-tokyo-sushi">
+                    <!-- div class="item-carousel" data-toggle="modal" data-target="#modal-tokyo-sushi">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -206,18 +206,15 @@
                                 </div>
                                 <div class="col-lg-7">
                                     <p style="font-size:16px;">
-                                        <!-- Your <strong>Guide</strong> to the best boating spots. An online Cruising -->
-                                        <!-- guide... That works on any device. -->
                                         <br><span class="link">View more →</span>
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <img src="images/clients/tokyo-sushi.png" alt="">
-                        <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
-                    </div>
+                    </div -->
 
-                    <div class="item-carousel" data-toggle="modal" data-target="#modal-tenging">
+                    <!-- div class="item-carousel" data-toggle="modal" data-target="#modal-tenging">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -228,18 +225,15 @@
                                 </div>
                                 <div class="col-lg-7">
                                     <p style="font-size:16px;">
-                                        <!-- Your <strong>Guide</strong> to the best boating spots. An online Cruising -->
-                                        <!-- guide... That works on any device. -->
                                         <br><span class="link">View more →</span>
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <img src="images/clients/tenging.png" alt="">
-                        <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
-                    </div>
+                    </div -->
 
-                    <div class="item-carousel" data-toggle="modal" data-target="#modal-invincible">
+                    <!-- div class="item-carousel" data-toggle="modal" data-target="#modal-invincible">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -258,8 +252,7 @@
                             </div>
                         </div>
                         <img src="images/clients/invincible.png" alt="">
-                        <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
-                    </div>
+                    </div -->
 
                     <div class="item-carousel" data-toggle="modal" data-target="#modal-mymxlog">
                         <div class="container row transparent">
