--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
                     </div>
 
-                    <!-- div class="item-carousel" data-toggle="modal" data-target="#modal-tokyo-sushi">
+                    <div class="item-carousel" data-toggle="modal" data-target="#modal-tokyo-sushi">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -212,9 +212,9 @@
                             </div>
                         </div>
                         <img src="images/clients/tokyo-sushi.png" alt="">
-                    </div -->
+                    </div>
 
-                    <!-- div class="item-carousel" data-toggle="modal" data-target="#modal-tenging">
+                    <div class="item-carousel" data-toggle="modal" data-target="#modal-tenging">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -231,9 +231,9 @@
                             </div>
                         </div>
                         <img src="images/clients/tenging.png" alt="">
-                    </div -->
+                    </div>
 
-                    <!-- div class="item-carousel" data-toggle="modal" data-target="#modal-invincible">
+                    <div class="item-carousel" data-toggle="modal" data-target="#modal-invincible">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -252,7 +252,7 @@
                             </div>
                         </div>
                         <img src="images/clients/invincible.png" alt="">
-                    </div -->
+                    </div>
 
                     <div class="item-carousel" data-toggle="modal" data-target="#modal-mymxlog">
                         <div class="container row transparent">
@@ -653,7 +653,7 @@
             </div>
         </div>
 
-        <div class="portfolio-modal modal" data-modal-source="tokyo-sushi" id="modal-tokyo-sushi" tabindex="-1"
+        <!-- div class="portfolio-modal modal" data-modal-source="tokyo-sushi" id="modal-tokyo-sushi" tabindex="-1"
             role="dialog" aria-hidden="true">
             <div class="modal-content" style="z-index: 10000;">
                 <div class="close-modal" data-dismiss="modal">
@@ -668,18 +668,6 @@
                             <div class="modal-body">
                                 <h2>Tokyo Sushi</h2>
                                 <hr class="star-primary">
-                                <!-- <p>
-                                    Web Development google-maps-api, sass, html5, angularjs, ruby, javascript <br><br>
-                                    The place to come when planning your next boating adventure. Its information base
-                                    will not only facilitate trip preparations and planning, it will also stimulate
-                                    ongoing destination discovery for the enjoyment of all aboard. <br><br>
-                                    Its user-friendly map-based approach can be accessed on any device that is connected
-                                    to the Internet, and whether using a desktop, laptop, tablet or smartphone, it gives
-                                    a versatile, one-stop information site not seen before in the boating community.
-                                    It's built on top of technologies that <a
-                                        href="http://google.com">http://google.com</a> uses. <br><br>
-                                    <a href="http://app.yachtingsbest.com">http://app.yachtingsbest.com</a>
-                                </p> -->
                                 <img data-src="images/portfolio/tokyo-sushi/1.png"
                                     class="unloaded img-responsive img-centered" alt="">
                                 <img data-src="images/portfolio/tokyo-sushi/2.png"
@@ -706,9 +694,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div -->
 
-        <div class="portfolio-modal modal" data-modal-source="tenging" id="modal-tenging" tabindex="-1" role="dialog"
+        <!-- div class="portfolio-modal modal" data-modal-source="tenging" id="modal-tenging" tabindex="-1" role="dialog"
             aria-hidden="true">
             <div class="modal-content" style="z-index: 10000;">
                 <div class="close-modal" data-dismiss="modal">
@@ -723,18 +711,7 @@
                             <div class="modal-body">
                                 <h2>Tenging</h2>
                                 <hr class="star-primary">
-                                <!-- <p>
-                                Web Development google-maps-api, sass, html5, angularjs, ruby, javascript <br><br>
-                                The place to come when planning your next boating adventure. Its information base
-                                will not only facilitate trip preparations and planning, it will also stimulate
-                                ongoing destination discovery for the enjoyment of all aboard. <br><br>
-                                Its user-friendly map-based approach can be accessed on any device that is connected
-                                to the Internet, and whether using a desktop, laptop, tablet or smartphone, it gives
-                                a versatile, one-stop information site not seen before in the boating community.
-                                It's built on top of technologies that <a
-                                    href="http://google.com">http://google.com</a> uses. <br><br>
-                                <a href="http://app.yachtingsbest.com">http://app.yachtingsbest.com</a>
-                            </p> -->
+                           
                                 <img data-src="images/portfolio/tenging/1.png"
                                     class="unloaded img-responsive img-centered" alt="">
                                 <img data-src="images/portfolio/tenging/2.png"
@@ -761,9 +738,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div -->
 
-        <div class="portfolio-modal modal" data-modal-source="invincible" id="modal-invincible" tabindex="-1"
+        <!-- div class="portfolio-modal modal" data-modal-source="invincible" id="modal-invincible" tabindex="-1"
             role="dialog" aria-hidden="true">
             <div class="modal-content" style="z-index: 10000;">
                 <div class="close-modal" data-dismiss="modal">
@@ -779,17 +756,7 @@
                                 <h2>Invincible Guarantee</h2>
                                 <hr class="star-primary">
                                 <!-- <p>
-                                Web Development google-maps-api, sass, html5, angularjs, ruby, javascript <br><br>
-                                The place to come when planning your next boating adventure. Its information base
-                                will not only facilitate trip preparations and planning, it will also stimulate
-                                ongoing destination discovery for the enjoyment of all aboard. <br><br>
-                                Its user-friendly map-based approach can be accessed on any device that is connected
-                                to the Internet, and whether using a desktop, laptop, tablet or smartphone, it gives
-                                a versatile, one-stop information site not seen before in the boating community.
-                                It's built on top of technologies that <a
-                                    href="http://google.com">http://google.com</a> uses. <br><br>
-                                <a href="http://app.yachtingsbest.com">http://app.yachtingsbest.com</a>
-                            </p> -->
+
                                 <img data-src="images/portfolio/invincible/1.png"
                                     class="unloaded img-responsive img-centered" alt="">
                                 <img data-src="images/portfolio/invincible/2.png"
@@ -814,7 +781,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div -->
 
         <div class="portfolio-modal modal" data-modal-source="mymxlog" id="modal-mymxlog" tabindex="-1" role="dialog"
             aria-hidden="true">
