--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
                     </div>
 
-                    <div class="item-carousel" data-toggle="modal" data-target="#modal-tokyo-sushi">
+                    <!-- div class="item-carousel" data-toggle="modal" data-target="#modal-tokyo-sushi">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -244,15 +244,13 @@
                                 </div>
                                 <div class="col-lg-7">
                                     <p style="font-size:16px;">
-                                        <!-- Your <strong>Guide</strong> to the best boating spots. An online Cruising
-                                        guide... That works on any device. -->
                                         <br><span class="link">View more →</span>
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <img src="images/clients/invincible.png" alt="">
-                    </div>
+                    </div -->
 
                     <div class="item-carousel" data-toggle="modal" data-target="#modal-mymxlog">
                         <div class="container row transparent">
@@ -711,7 +709,7 @@
                             <div class="modal-body">
                                 <h2>Tenging</h2>
                                 <hr class="star-primary">
-                           
+
                                 <img data-src="images/portfolio/tenging/1.png"
                                     class="unloaded img-responsive img-centered" alt="">
                                 <img data-src="images/portfolio/tenging/2.png"
