--- a/payment/payment.html
+++ b/payment/payment.html
@@ -3,7 +3,7 @@
         <div id="paypal-button-container"></div>
       </div>
     </div>
-  <script src="https://www.paypal.com/sdk/js?client-id=sb&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=Ad2fr4ndRKcPrt3ToDxJEwRYaSMPdtYVI317KXC1n6MwrLkQ9K8sGZuqNz1yVqf_OZN9A1YgisrjlLx1&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
   <script>
     function initPayPalButton() {
       paypal.Buttons({
@@ -11,7 +11,7 @@
           shape: 'rect',
           color: 'gold',
           layout: 'vertical',
-          label: 'pay',
+          label: 'paypal',
           
         },
 
