--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
               <div class="hero-headline">
                 <p class="animated fadeIn">
                   We are a compact but really efficient team of Engineers and
-                  Artists, whose aim is to make our Cliets Happy and the
+                  Artists, whose aim is to make our Clients Happy and the
                   Software Development Fun and Enjoyable.<br />
                   We have worked on many interesting and fun projects and built
                   custom solutions for our clients and comunity since 2013.
@@ -387,7 +387,7 @@
                   <h3>About Us</h3>
                   <p>
                     We are a compact but really efficient team of Engineers and
-                    Artists, whose aim is to make our Cliets Happy and the
+                    Artists, whose aim is to make our Clients Happy and the
                     Software Development Fun and Enjoyable.
                   </p>
                 </div>
