--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-lg-offset-2">
                         <p>We are a compact but really efficient team of Engineers and Artists, whose aim is to make our
-                            Cliets Happy and the Software Development Fun and Enjoyable.
+                            Clients Happy and the Software Development Fun and Enjoyable.
                             <!-- — <a href="/blog/tao-of-hashicorp.html" class="cont-read" style="color:#fff; text-decoration:underline;">More about us<span class="light-caret-right small"></span></a -->
                         </p>
                     </div>
@@ -559,7 +559,7 @@
                         <div class="footer-col col-md-6">
                             <h3>About Us</h3>
                             <p>We are a compact but really efficient team of Engineers and Artists, whose aim is to make
-                                our Cliets Happy and the Software Development Fun and Enjoyable.</p>
+                                our Clients Happy and the Software Development Fun and Enjoyable.</p>
                         </div>
                     </div>
                 </div>
