--- a/about.html
+++ b/about.html
@@ -123,9 +123,9 @@
             <div class="col-lg-6 col-md-6 col-sm-12 pull-left text-left">
               <div class="hero-headline">
                 <p class="animated fadeIn">
-                  We are a compact but really efficient team of Engineers and
-                  Artists, whose aim is to make our Clients Happy and the
-                  Software Development Fun and Enjoyable.<br />
+                  We are a compact but really efficient team of engineers and
+                  artists, whose aim is to make our clients happy and the
+                  software development fun and enjoyable.<br />
                   We have worked on many interesting and fun projects and built
                   custom solutions for our clients and comunity since 2013.
                 </p>
