--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-lg-offset-2">
-                        <p>We are a compact but really efficient team of Engineers and Artists, whose aim is to make our
-                            Clients Happy and the Software Development Fun and Enjoyable.
+                        <p>We are a compact but really efficient team of engineers and artists, whose aim is to make our
+                            clients happy and the software development fun and enjoyable.
                             <!-- — <a href="/blog/tao-of-hashicorp.html" class="cont-read" style="color:#fff; text-decoration:underline;">More about us<span class="light-caret-right small"></span></a -->
                         </p>
                     </div>
