--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                                     <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                                 </li> -->
                                 <li>
-                                    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/dren-kaymakci-a3b50388/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                                 </li>
                                 <!-- <li>
                                     <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
