--- a/about.html
+++ b/about.html
@@ -354,14 +354,10 @@
                   <h3>Around the Web</h3>
                   <ul class="list-inline">
                     <li>
-                      <a href="#" class="btn-social btn-outline"
-                        ><i class="fa fa-fw fa-google-plus"></i
-                      ></a>
+                      <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
                     </li>
                     <li>
-                      <a href="#" class="btn-social btn-outline"
-                        ><i class="fa fa-fw fa-linkedin"></i
-                      ></a>
+                      <a href="https://www.linkedin.com/in/dren-kaymakci-a3b50388/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>          
                     </li>
                     <li>
                       <a
