--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             <div class="footer-above">
                 <div class="container">
                     <div class="row">
-                        <div class="footer-col col-md-6">
+                        <div class="footer-col col-md-4">
                             <h3>Around the Web</h3>
                             <ul class="list-inline">
                                 <!-- <li>
@@ -556,10 +556,14 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="footer-col col-md-6">
+                        <div class="footer-col col-md-4">
                             <h3>About Us</h3>
                             <p>We are a compact but really efficient team of Engineers and Artists, whose aim is to make
                                 our Clients Happy and the Software Development Fun and Enjoyable.</p>
+                        </div>
+                        <div class="footer-col col-md-4">
+                            <h3>Contact us</h3>
+                            <p>contact@drooids.com</p>
                         </div>
                     </div>
                 </div>
@@ -1154,17 +1158,7 @@
             t.async = 1; t.src = e; s = i.getElementsByTagName(g)[0]; s.parentNode.insertBefore(t, s);
         })(window, document, '_gscq', 'script', '//widgets.getsitecontrol.com/87828/script.js');
     </script>
-
-    <script>
-        function initFreshChat() {
-            window.fcWidget.init({
-                token: "69190c37-45f7-4dc8-a35e-714f154f1680",
-                host: "https://wchat.freshchat.com"
-            });
-        }
-        function initialize(i, t) { var e; i.getElementById(t) ? initFreshChat() : ((e = i.createElement("script")).id = t, e.async = !0, e.src = "https://wchat.freshchat.com/js/widget.js", e.onload = initFreshChat, i.head.appendChild(e)) } function initiateCall() { initialize(document, "freshchat-js-sdk") } window.addEventListener ? window.addEventListener("load", initiateCall, !1) : window.attachEvent("load", initiateCall, !1);
-    </script>
-
+    
 </body>
 
 </html>
