--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 pull-left text-left animated fadeIn">
                         <div class="hero-headline">
-                            <h1>You tell, we Realize. <br>Precise software development.</h1>
+                            <h1>You tell, we Realize. 
+                                <br> We build from scratch or modernize your existing application using latest tech and AI.
+                                <br>Precise software development.</h1>
                             <a href="about.html" class="hbtn outline-btn large">About Us<span
                                     class="light-caret-right"></span></a>
                         </div>
@@ -116,9 +118,9 @@
                         style="width:80px; height:180px; margin-bottom:30px; position:absolute; left:-140px; top:70px;" />
                     <h2>What do we do</h2>
                     <hr>
-                    <h4>Building your startup</h4>
-                    <p>We work with you to build your startup, modernize & rebuild your technology, and help you enter
-                        new markets with new products. We advise you on all facets of your product — from engineering to
+                    <h4>Building your application</h4>
+                    <p>We work with you to build your application from scratch or modernize & rebuild your existing application.
+                        We advise you on all facets of your product — from engineering to
                         marketing — helping you make informed decisions along the way. </p>
                     <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
                 </div>
