--- a/index.html
+++ b/index.html
@@ -805,10 +805,7 @@
                                 <p>
                                     Web Development<br>
                                     Version two of Aviation Logging system, for Technicians, Pilots and Aviation
-                                    Companies. <br><br>
-                                    Feel free to test: <a href="http://dev.mymxlog.com">http://dev.mymxlog.com</a> <br>
-                                    User: ind@gmail.com <br>
-                                    Pass: 123123123
+                                    Companies.
                                 </p>
                                 <img data-src="images/portfolio/p1/p1i0.png"
                                     class="unloaded img-responsive img-centered" alt="">
