--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@
                     <div class="col-lg-6 col-md-6 col-sm-12 pull-left text-left animated fadeIn">
                         <div class="hero-headline">
                             <h1>You tell, we Realize. 
-                                <br> We build from scratch or modernize your existing application using latest tech and AI.
-                                <br>Precise software development.</h1>
                             <a href="about.html" class="hbtn outline-btn large">About Us<span
                                     class="light-caret-right"></span></a>
                         </div>
@@ -119,6 +117,8 @@
                     <h2>What do we do</h2>
                     <hr>
                     <h4>Building your application</h4>
+                    <p>We build from scratch or modernize your existing application using latest tech and AI.
+                                <br>Precise software development.</p>
                     <p>We work with you to build your application from scratch or modernize & rebuild your existing application.
                         We advise you on all facets of your product — from engineering to
                         marketing — helping you make informed decisions along the way. </p>
