--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 pull-left text-left animated fadeIn">
                         <div class="hero-headline">
-                            <h1>You tell, we Realize. 
+                            <h1>You tell, we Realize. <br>
+                            Precise software development. <br> 
                             <a href="about.html" class="hbtn outline-btn large">About Us<span
                                     class="light-caret-right"></span></a>
                         </div>
