--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@
                     </tr>
                     <tr>
                       <th>Fun fact</th>
-                      <td>Currently a game egine programmer</td>
+                      <td>Currently a game engine programmer</td>
                     </tr>
                     <!-- <tr>
                                             <th>Websites</td>
